Fix Next 16 static export: output=export, remove next export, remove vercel.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "build:vercel": "next build && next export",
+    "build:vercel": "next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -20,4 +20,3 @@
     "typescript": "^5.9.3"
   }
 }
-
