Add postbuild to copy export out/ into public/ for Vercel

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:vercel": "next build",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "node scripts/copy-out-to-public.mjs"
   },
   "dependencies": {
     "next": "^16.1.0",
